Bug 726734: Reload plugin instances when the src/data URL changes. r=jst